--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,13 @@ dependencies = [
 [project.optional-dependencies]
 dev = ["pytest>=6.0", "pytest-cov", "black", "flake8", "mypy", "build", "twine"]
 test = ["pytest>=6.0", "pytest-cov"]
-docs = ["sphinx", "sphinx-rtd-theme", "six", "decorator"]
+docs = [
+    "sphinx>=7.1.0",
+    "sphinx-rtd-theme>=1.3.0",
+    "sphinx-autoapi>=2.1.1",
+    "six>=1.16.0",
+    "decorator>=5.1.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/sugarlabs/sugar-toolkit-gtk4"
