--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,7 +3,6 @@
 
 # Required
 version: 2
-
 # Set the OS, set of tools, and dependencies
 build:
   os: ubuntu-22.04
@@ -25,10 +24,7 @@ formats:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+    - requirements: docs/requirements.txt
 
 # Set the version of Python and other tools you might need
 submodules:
